namespaces.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: production
#
#---
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-logging
