pesbuk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk-deployment
  namespace: staging
  labels:
    app: pesbuk
spec:
  selector:
    matchLabels:
      app: pesbuk
  replicas: 2
  template:
    metadata:
      labels:
        app: pesbuk
    spec:
      containers:
      - name: pesbuk
#        image: gandi12/pesbuk:latest
        image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME_PB:$BUILD_NUMBER
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-fb
            mountPath: "/var/www/html/config.php"
            subPath: "config.php"
      volumes:
        - configMap:
            name: s-pesbuk-configmap
          name: config-fb

---
apiVersion: v1
kind: Service
metadata:
  name: pesbuk-service
  namespace: staging
  labels:
    app: pesbuk
    env: staging
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pesbuk
