landing-page.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  namespace: staging
  labels:
    app: landing-page
spec:
  selector:
    matchLabels:
      app: landing-page
  replicas: 2
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
#        image: gandi12/landing-page:latest
        image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME_LP:$BUILD_NUMBER
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  namespace: staging
  labels:
    app: landing-page
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: landing-page

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:

## Service Location n Characters
  - host: landing-page.gandi.my.id
    http:
      paths:
      - path: /
        backend:
          serviceName: landing-page-service
          servicePort: 80
